fix overflowing cards

--- a/css/modules/garden-one-hundred-fifteen.css
+++ b/css/modules/garden-one-hundred-fifteen.css
@@ -32,7 +32,7 @@ panel {
   border-radius: 5%;
   padding: 20px;
   max-width: 400px;
-  width: 30vw;
+  width: 29vw;
   min-width: 200px;
 }
 
